--- a/src/App.css
+++ b/src/App.css
@@ -207,11 +207,11 @@ li.logo-item {
 /* Mobile phone */
 @media only screen and (max-width: 550px) {
   .container {
-    margin-top: 0px;
+    margin-top: -10px;
   }
   
   li.nav-item {
-    margin: 20px 10px 30px 0px;
+    margin: 30px 15px 30px 0px;
   }
 
   ul.card-logo {
@@ -220,8 +220,9 @@ li.logo-item {
   }
 
   li.logo-item {
-    padding: 15px;
-    margin-left: -20px;
+    position: relative;
+    float: left;
+    left: -50px;
   }
 
   .card-columns {
@@ -244,17 +245,17 @@ li.logo-item {
   }
 
   #add-card {
-    padding: 10px 70px;
+    padding: 10px 80px;
   }
 
   .total-right {
     padding: 10px;
-    margin-left: 10px;
+    margin-left: -50px;
   }
 
   .section-right {
     padding: 10px;
-    margin-left: 10px;
+    margin-left: -50px;
     font-weight: bold;
   }
 
