--- a/src/App.css
+++ b/src/App.css
@@ -214,6 +214,12 @@ li.logo-item {
     margin: 30px 15px 30px 0px;
   }
 
+  #line {
+    background: lavender;
+    height: 0.3px;
+    border: 1px;
+  }
+
   ul.card-logo {
     display: flex;
     justify-content: flex-start;
@@ -242,11 +248,11 @@ li.logo-item {
 
   #radio-btn {
     margin-top: 25px;
-    width: 4px;
-    height: 3px;
+    width: 5px;
+    height: 4px;
     border-radius: 50%;
     background: white;
-    border: 2px solid #416be9;
+    border: 4px solid #416be9;
   }
 
   #add-card {
@@ -255,12 +261,12 @@ li.logo-item {
 
   .total-right {
     padding: 5px;
-    margin-left: 15px;
+    margin-left: 30px;
   }
 
   .section-right {
     padding: 5px;
-    margin-left: 15px;
+    margin-left: 30px;
     font-weight: bold;
   }
 
@@ -279,12 +285,12 @@ li.logo-item {
 
   .total-right {
     padding: 10px;
-    margin-left: 20px;
+    margin-left: 30px;
   }
 
   .section-right {
     padding: 10px;
-    margin-left: 20px;
+    margin-left: 30px;
     font-weight: bold;
   }
 
