--- a/src/App.css
+++ b/src/App.css
@@ -137,12 +137,12 @@ li.logo-item {
 }
 
 #radio-btn {
+  display: inline-block;
   margin-top: 25px;
-	width: 1px;
-	height: 3px;
+	width: 5px;
+	height: 5px;
 	border-radius: 50%;
-	background: white;
-  border: 5px solid #416be9;
+  border: 3px solid #416be9;
 }
 
 #add-card {
@@ -172,7 +172,6 @@ li.logo-item {
 }
 
 .total-right {
-  padding: 10px;
   margin-left: 500px;
 }
 
@@ -199,7 +198,6 @@ li.logo-item {
 }
 
 .section-right {
-  padding: 10px;
   margin-left: 250px;
   font-weight: bold;
 }
@@ -246,27 +244,16 @@ li.logo-item {
     flex-wrap: wrap;
   }
 
-  #radio-btn {
-    margin-top: 25px;
-    width: 5px;
-    height: 4px;
-    border-radius: 50%;
-    background: white;
-    border: 4px solid #416be9;
-  }
-
   #add-card {
     padding: 10px 115px;
   }
 
   .total-right {
-    padding: 5px;
-    margin-left: 30px;
+    margin-left: 50px;
   }
 
   .section-right {
-    padding: 5px;
-    margin-left: 30px;
+    margin-left: 50px;
     font-weight: bold;
   }
 
@@ -284,13 +271,11 @@ li.logo-item {
   }
 
   .total-right {
-    padding: 10px;
-    margin-left: 30px;
+    margin-left: 50px;
   }
 
   .section-right {
-    padding: 10px;
-    margin-left: 30px;
+    margin-left: 50px;
     font-weight: bold;
   }
 
