--- a/src/App.css
+++ b/src/App.css
@@ -56,32 +56,6 @@ font-size: 12px;
   margin-top: 10px;
 }
 
-/*
-#card {
-  background-image: linear-gradient(to right, #d05653, #6861bc);
-  color: #ffffff;
-  font-weight: 500;
-  font-size: 10px;
-  padding: 10px 20px;
-  width: 250px;
-  border-radius: 4px;
-}
-
-#chip {
-  width: 60px;
-  height: 40px;
-  margin-left: -10px;
-}
-
-#mc-logo {
-  position: relative;
-  float: right;
-  bottom: 40px;
-  width: 60px;
-  height: 40px;
-}
-*/
-
 ul.card-logo {
   display: flex;
   flex-direction: row;
@@ -226,6 +200,12 @@ li.logo-item {
     border: 1px;
   }
 
+  #card {
+    width: 290px;
+    height: 190px;
+    margin-top: 10px;
+  }
+
   ul.card-logo {
     display: flex;
     justify-content: flex-start;
@@ -257,20 +237,20 @@ li.logo-item {
   }
 
   .total-right {
-    margin-left: 50px;
+    margin-left: 55px;
   }
 
   .section-right {
-    margin-left: 50px;
+    margin-left: 55px;
     font-weight: bold;
   }
 
   #pay-button {
     padding: 10px 25px;
-    margin-bottom: 60px;
+    margin-bottom: 55px;
   }
-  
 }
+
 /* Tablet */
 @media only screen and (max-width: 760px) {
   .card-section {
@@ -279,11 +259,11 @@ li.logo-item {
   }
 
   .total-right {
-    margin-left: 50px;
+    margin-left: 55px;
   }
 
   .section-right {
-    margin-left: 50px;
+    margin-left: 55px;
     font-weight: bold;
   }
 
@@ -292,4 +272,3 @@ li.logo-item {
     flex-wrap: wrap;
   }
 }
-
