--- a/src/App.css
+++ b/src/App.css
@@ -46,14 +46,14 @@ li.nav-item:hover {
 }
 
 #choose-pay {
-color: #949494;
-font-size: 12px;
+  color: #949494;
+  font-size: 12px;
 }
 
 .card-section {
   display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
 
 #card {
@@ -210,6 +210,7 @@ li.logo-item {
 @media only screen and (max-width: 550px) {
   .container {
     margin-top: -10px;
+    padding-left: 30px;
   }
   
   li.nav-item {
@@ -243,8 +244,9 @@ li.logo-item {
   .card-columns {
     display: flex;
     flex-wrap: wrap;
+    gap: 10px
   }
-
+  
   .details-item {
     width: 260px;
   }
